--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: XanatosX Homepage
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: XanatosX
 language: en
-timezone: ''
+timezone: 'Europe/Berlin'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://xanatosx.github.io/
 root: /
 permalink: /p/:abbrlink/
 permalink_defaults:
