feat: update subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: XanatosX Homepage
-subtitle: 'My Homepage Sharing My Thoughts'
+subtitle: 'A Window into My Mind'
 description: ''
 keywords:
 author: XanatosX
